Finished hero section applied zed indexes and fix some spacing

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -5,3 +5,9 @@
 .bg__content {
   background-image: url("../public/stars.svg");
 }
+
+@layer components {
+  .btn__hero {
+    @apply px-6 py-2 border border-[#242424] rounded-full uppercase text-xs tracking-widest text-theme1 cursor-pointer;
+  }
+}
